--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Film Avatar</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <title>Film Avatar - Make webTV your own</title>
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" media="screen,projection">
+  <link rel="stylesheet" type="text/css" href="css/style.css" media="screen,projection"/>
 </head>
 <body>
-  Welcome to Film Avatar
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <nav class="black" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo">Film Avatar</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Change Channel</a></li>
+        <li><a href="#">Videos</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Change Channel</a></li>
+        <li><a href="#">Videos</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center teal-text text-lighten-2">Welcome to Film Avatar</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">Make webTV your own</h5>
+        </div>
+        <div class="row center">
+          <a href="channels.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Browse Channels</a>
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+    <!-- <div class="parallax"><img src="img/thinman.jpg" alt="Unsplashed background img 1"></div> -->
+  </div>
+
+
+
+
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
 </body>
 </html>
