--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,6 @@
     <!-- <div class="parallax"><img src="img/thinman.jpg" alt="Unsplashed background img 1"></div> -->
   </div>
 
-
+  <script type="text/javascript" src="/js/app/app.module.js"></script>
 </body>
 </html>
