--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -13,11 +13,12 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 </head>
-<body ng-controller="MainController">
+<body ng-app="app" ng-controller="MainController">
     <nav class="black" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Film Avatar</a>
       <ul class="right hide-on-med-and-down">
+        <li><a href="">Login</a></li>
         <li><a href="#">Change Channel</a></li>
         <li><a href="#">Videos</a></li>
       </ul>
