--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
     <div class="nav-wrapper container">
       <a id="logo-container" ui-sref="home" class="brand-logo">Film Avatar</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">All Channels</a></li>
+        <li><a ui-sref="channels">All Channels</a></li>
         <li><a href="#">My Channels</a></li>
         <li><a href="#">Videos</a></li>
         <li ng-show="!isLoggedIn()"><a ui-sref="login">Login</a></li>
@@ -26,7 +26,7 @@
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">All Channels</a></li>
+        <li><a ui-sref="channels">All Channels</a></li>
         <li><a href="#">My Channels</a></li>
         <li><a href="#">Videos</a></li>
       </ul>
