1. Edit README.md to add routes and data models. 2. Add about state and about.html template.

--- a/client/index.html
+++ b/client/index.html
@@ -19,14 +19,16 @@
       <a id="logo-container" ui-sref="home" class="brand-logo">Film Avatar</a>
       <ul class="right hide-on-med-and-down">
         <li><a ui-sref="channels">All Channels</a></li>
-        <li><a href="#">My Channels</a></li>
+        <!-- <li><a href="#">My Channels</a></li> -->
+        <li><a ui-sref="about">About</a></li>
         <li ng-show="!isLoggedIn()"><a ui-sref="login">Login</a></li>
         <li ng-show="isLoggedIn()" ng-click="logout()"><a>Logout {{currentUser().handle}}</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a ui-sref="channels">All Channels</a></li>
-        <li><a href="#">My Channels</a></li>
+        <!-- <li><a href="#">My Channels</a></li> -->
+        <li><a ui-sref="about">About</a></li>
         <li ng-show="!isLoggedIn()"><a ui-sref="login">Login</a></li>
         <li ng-show="isLoggedIn()" ng-click="logout()"><a>Logout {{currentUser().handle}}</a></li>
       </ul>
