1. configure video view page 2. add video state 3. create VideoController for video state and view 4. configure controller to allow stored html links to be sent to video view 5. create HTML5 video player for video viewx

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+  <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 </head>
@@ -49,5 +50,6 @@
   <script src="js/app/controllers/login.js"></script>
   <script src="js/app/controllers/channels.js"></script>
   <script src="js/app/controllers/channel.js"></script>
+  <script src="js/app/controllers/video.js"></script>
 </body>
 </html>
